15464
Suppose we have the following Java source file:
```scala
package example;

public class Example {
}
```

And suppose we also have the following Scala source file:
```scala
package object example {
	def Example() = new Example()
}
```

If we compile like this:
```scala
$$ scalac -sourcepath . example/package.scala
./example/Example.java:3: error: Example is already defined as method Example
public class Example {
             ^
one error found
```

But if we compile like this:
```scala
$$ scalac -sourcepath . example/package.scala example/Example.java
```

…it works fine.

This behavior does not appear to be intentional.
